Maybe fixed screen height issues on mobile?

--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -18,20 +18,9 @@ button:focus {
     @apply p-2
 }
 
-body {
-    min-height: 100vh;
-    /* mobile viewport bug fix */
-    min-height: -webkit-fill-available;
-}
-
-.fill-height {
-    min-height: 100vh;
-    /* mobile viewport bug fix */
-    min-height: -webkit-fill-available;
-}
-
-html {
-    height: -webkit-fill-available;
+.full-height {
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100);
 }
 /* purgecss end ignore */
 
